fixed document file paths

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       id="screen-container"
       class="d-flex justify-content-center align-items-end p-2"
       style="
-        background-image: url(./images/Background.png);
+        background-image: url(images/Background.png);
         background-position: center;
         background-size: cover;
       "
@@ -58,12 +58,12 @@
         <div
           class="screen rounded-3"
           style="
-            background-image: url(./images/black.png);
+            background-image: url(images/black.png);
             background-size: cover;
             background-position: center;
           "
         >
-          <img id="freddy" src="/images/freddy.png" alt="" height="120px" />
+          <img id="freddy" src="imagesfreddy.png" alt="" height="120px" />
         </div>
         <div
           class="tv-buttons p-3 rounded-3 bg-secondary d-flex justify-content-between align-items-center"
@@ -91,12 +91,12 @@
             Cycle throught the cameras with the arrow buttons on the TV (Or
             using the A and D keys), and try to find Freddie.
             <span
-              ><img src="./images/freddy.png" alt="freddie" height="40px"
+              ><img src="images/freddy.png" alt="freddie" height="40px"
             /></span>
             Click on him to move your car
             <span
               ><img
-                src="./images/player_1.png"
+                src="images/player_1.png"
                 alt="little red car"
                 height="20px"
             /></span>
@@ -106,7 +106,7 @@
             Win the race before the yellow car
             <span
               ><img
-                src="./images/player_2.png"
+                src="images/player_2.png"
                 alt="yellow car"
                 style="height: 20px"
             /></span>
@@ -188,6 +188,6 @@
       <!-- <div id="mini-map-container"></div> -->
     </div>
 
-    <script type="module" src="./lib/wagon_race.js"></script>
+    <script type="module" src="lib/wagon_race.js"></script>
   </body>
 </html>
