fixed document file paths again

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             background-position: center;
           "
         >
-          <img id="freddy" src="imagesfreddy.png" alt="" height="120px" />
+          <img id="freddy" src="images/freddy.png" alt="" height="120px" />
         </div>
         <div
           class="tv-buttons p-3 rounded-3 bg-secondary d-flex justify-content-between align-items-center"
