--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <div class="border rounded-3 p-3 fs-4 bg-secondary">
           <h2>Rules:</h2>
           <p>
-            Cycle throught the cameras with the arrow buttons on the TV (Or
-            using the A and D keys), and try to find Freddie.
+            Cycle through the cameras with the arrow buttons on the TV (Or using
+            the A and D keys), and try to find Freddie.
             <span
               ><img src="images/freddy.png" alt="freddie" height="40px"
             /></span>
